force-app/main/default/objects/Survey_Answer__c/fields/Brand_Alias__c.field-meta.xml
<CustomField>
    <fullName>Brand_Alias__c</fullName>
    <description>Per-brand-alias answer (MT surveys, BRD 21.19).</description>
    <label>Brand Alias</label>
    <length>120</length>
    <type>Text</type>
</CustomField>