force-app/main/default/objects/Survey_Answer__c/fields/Photo_After_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_After_URL__c</fullName>
    <description>MT merchandising after photo (BRD 18.2/21.19).</description>
    <label>Photo After URL</label>
    <type>Url</type>
</CustomField>