force-app/main/default/objects/Survey_Answer__c/fields/Photo_Before_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_Before_URL__c</fullName>
    <description>MT merchandising before photo (BRD 18.2/21.19).</description>
    <label>Photo Before URL</label>
    <type>Url</type>
</CustomField>