force-app/main/default/objects/Survey_Answer__c/fields/Visibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Type__c</fullName>
    <description>MT additional-visibility paid/unpaid (BRD 21.19).</description>
    <label>Visibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>